--- a/src/css/app.css
+++ b/src/css/app.css
@@ -67,6 +67,10 @@ body {
 border:none;
 background:none;
 }
+.align .orange #org:hover{
+  cursor:pointer;
+}
+
 .app-messenger {
   display: flex;
   flex-direction: column;
